Wikipedia_tweak.user.css
/* Wikipedia tweak */
@namespace url(http://www.w3.org/1999/xhtml);
@-moz-document domain("wikipedia.org") {
  /* Highlight interlanguage links */
  #p-lang li.interwiki-en a,
  #p-lang li.interwiki-ja a {
    color: #fff !important;
    font: 1.2rem/1 sans-serif !important;
    text-align: center !important;
    text-decoration: none !important;
    padding: 0.5rem !important;
    background: #fa0 !important;
    position: fixed !important;
    top: 0 !important;
    left: 11rem !important;
    display: block !important;
    width: 32rem !important;
    border-radius: 0 0 0.5rem 0.5rem !important;
    white-space: nowrap !important;
    overflow: hidden !important;
    text-overflow: ellipsis !important;
  }

  #p-lang li.interwiki-en a:after, #p-lang li.interwiki-ja a:after { content: " \bb\a0 " attr(title); }
  #p-lang li.interwiki-en a:hover, #p-lang li.interwiki-ja a:hover { background: #f70 !important; }

  .mw-headline:target { padding-top: 3rem !important; }


  /* Show last modified timestamp at header section */
  #footer-info-lastmod {
    color: #888 !important;
    font: 0.8rem/1 sans-serif !important;
    padding: 0.2rem 0 !important;
    position: absolute !important;
    top: 3.5rem !important;
    left: 18rem !important;
    display: block !important;
    width: 28rem !important;
    white-space: nowrap !important;
    overflow: hidden !important;
    text-overflow: ellipsis !important;
  }
}

